# connectomeviewer

./: .gitattributes  .gitignore  .project  COPYRIGHT  MANIFEST.in  README  README.rst  RELEASE-NOTES  build_helpers.py  connectomeviewer.py  setup.cfg  setup.py  setup_egg.py
cviewer/: __init__.py  __version__.py  app.py  cviewer_workbench_application.py  info.py  run.py  setup.py  version.py
cviewer/action/: common.py  help.py  load_cff.py  run_script.py
cviewer/io/: setup.py
cviewer/io/cff/: cff.py  cfflib.py  cfile.py  cmetadata.py  connectome.xsd  ctrack.py  cvolume.py  loadsave.py  util.py
cviewer/io/cff_traited/: cfile.py  cmetadata.py  cnetwork.py  csurface.py  ctimeserie.py  cvolume.py  loadsave.py  validator.py
cviewer/io/gifti/: parse_gifti_fast.py
cviewer/io/gifti_c/: docstrings.py  gifti.py  pygiftiio.py  setup.py
cviewer/io/nipy/: files.py  nifti_ref.py  setup.py
cviewer/libs/: README.rst  setup.py
cviewer/libs/dipy/: __init__.py  setup.py
cviewer/libs/pyconto/: __init__.py
cviewer/libs/pyeeg/: pyeeg.py
cviewer/libs/tomoviz/: generate_data.py  time_series_visualizer.py
cviewer/plugins/: setup.py
cviewer/plugins/analysis/: analysis_node.py  analysis_ui_plugin.py
cviewer/plugins/bindings/: bindings_plugin.py
cviewer/plugins/cdb/: cfile_editor.py  connection_details.py  connectomedb_action_set.py  connectomedb_actions.py  connectomedb_interface.py  connectomedb_plugin.py  connectomedb_preferences_page.py  preferences.ini
cviewer/plugins/cff/: __init__.py  cff_plugin.py  cfile.py  meta.py  network.py  setup.py  surface.py  surface_container.py  trackfile.py  volume.py
cviewer/plugins/cff2/: cbase.py  cdata.py  (+13 more)
cviewer/resources/: MNI-BAs-6239-voxels.csv  create_cdb.sql
cviewer/scripts/: cviewer_post_script.py
cviewer/sources/: datasource_manager.py
cviewer/visualization/: node_picker.py  render_manager.py  render_volume.py  setup.py
debian/: blends  changelog  connectomeviewer.lintian-overrides  control  copyright  gbp.conf  pyversions  rules  watch
debian/source/: options
doc/: about.rst  conf.py  connectomemappingpipe.rst  index.rst  license.rst  links.rst  links_names.txt  plugins.rst  publications.rst  releasenotes.rst
doc/_templates/: indexsidebar.html
doc/devel/: index.rst  intro.rst
doc/doc2/: Makefile
doc/source/: about.rst  conf.py  index.rst  license.rst  publications.rst
doc/users/: connectomefileformat.rst  externals.rst  index.rst  installation.rst  tutorial.rst
examples/BlenderExporter/: blender_voxeldata.py  importing_voxeldata_struct.blend
examples/brainslices/: README  display.py
examples/converter/: README
examples/dipy/: dicoms_2_tracks.py  tractography_clustering.py
examples/graph_rendering/: README  delaunay_nx.py  delaunay_rivest.py  graphrender.py  numpy_and_vtk_volume_render.py  nx_cooledgerender.py  nx_graphrender.py  nx_graphrender2.py  nx_graphrender3.py  nx_graphrender4.py  nx_graphrender5.py  nx_graphrender_directed_fromcxx.py  nx_graphrendering_directed.py  pajek_for_map.py  rendermods.py  test.gml
examples/graph_rendering/vtkgraph/Graphs/: CMakeLists.txt  Makefile  vtkApplyLayout.h  vtkChildIterator.cxx  vtkDistanceMetric.h  vtkDualGeometry.cxx  vtkEdgeTubeFilter.cxx  vtkEdgeTubeFilter.h  vtkGEMLayout.cxx  vtkGraph.cxx  vtkGraphReader.cxx  vtkGraphToGraphFilter.cxx  vtkIdListIterator.h  vtkIdMap.cxx  vtkLabelMatcher.cxx  vtkParentIterator.h  vtkRadialLayout.cxx  vtkRadialLayout.h  vtkSelectNthBestNodes.h  vtkSelectOnSubrange.cxx  vtkSelectOnSubrange.h  vtkSelectReachable.cxx  vtkSpanningDAG.h  vtkStrahlerMetric.cxx  vtkStringTable.h  vtkUseLayout.cxx  vtkXGMLReader.h
examples/graph_rendering/vtkgraph/Graphs/Examples/Tcl/: hde.tcl
examples/matlab_import/: example.py
examples/nbs/: X.mat  Y.mat  example1.py  example2.py  example3.py  input.mat
examples/reporting/: create_pdf.py
examples/sLORETA/: List19e.sxyz
scratch/: activation_movie.py  convertpos.py  hcp.py  mmhd.py  split_fibers.py
scratch/tomoviz/: time_series_visualizer.py
scripts/: install_cviewer.sh  install_cviewer_NOT_TO_USE.sh  install_cviewer_fedora.sh  install_cviewer_ubuntu.sh  install_cviewer_ubuntu10_10.sh
src/: README
src/bct-cpp-read-only/: Makefile  Makefile.vars-template  assortativity.cpp  bct.h  bct_gsl.i  bct_py.i  betweenness_bin.cpp  betweenness_wei.cpp  breadth.cpp  breadthdist.cpp  cat.cpp  charpath.cpp  clustering_coef_bd.cpp  clustering_coef_bu.cpp  clustering_coef_wd.cpp  clustering_coef_wu.cpp  connectivity_length.cpp  convert.cpp  cycprob.cpp  debug.cpp  degrees_dir.cpp  degrees_und.cpp  density_dir.cpp  density_und.cpp  distance_bin.cpp  distance_wei.cpp  efficiency.cpp  eigenvector_centrality.cpp  erange.cpp  find_motif34.cpp  findpaths.cpp  findwalks.cpp  fve.cpp  jdegree.cpp  latmio_dir.cpp  latmio_dir_connected.cpp  latmio_und.cpp  latmio_und_connected.cpp  macaque.cpp  make_motif34lib.cpp  (+36 more)
(+435 files in other folders)
